samples/_failures_safe/1761499996_5e10a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ac30f2c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1ac30f2c.c:171:40: error: expected ‘;’ at end of input
  171 |         line = tokens[token_count].line
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_1ac30f2c.c:171:9: error: expected declaration or statement at end of input
  171 |         line = tokens[token_count].line
      |         ^~~~
./samples/SAFE/__tmp_1ac30f2c.c:171:9: error: expected declaration or statement at end of input
